--- a/src/styles.css
+++ b/src/styles.css
@@ -77,11 +77,13 @@ hr {
 .subtext {
     font-size: 15px;
     font-weight: 300;
+    
 }
 img {
     height: 50px;
     width: 50px;
     margin: 30px;
+    margin-bottom: 0;
     
 }
 a {
@@ -159,6 +161,7 @@ a {
     margin: 10px;
     background-color: #123f56 ;
     color: white;
+    
 }
 
 .project-container {
